[package]
name = "payments_gateway"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
colored = "2.0.0"
hyper = "0.14.23"
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
sqlx = { version = "0.6.2", features = ["all", "runtime-tokio-rustls"] }
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
