[package]
name = "app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.1"
chrono = "0.4.23"
colored = "2.0.0"
entity = { version = "0.1.0", path = "../entity" }
hyper = "0.14.23"
migration = { version = "0.1.0", path = "../migration" }
sea-orm = { version = "0.10.7", features = ["sqlx-postgres", "runtime-tokio-rustls", "macros"] }
sea-orm-migration = { version = "0.10.7", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.152", features = ["derive"]}
serde_json = "1.0.91"
thiserror = "1.0.38"
tokio = { version = "1.24.1", features = ["full"] }
tower = "0.4.13"
